css / img added

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Hello world!</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <h1>
@@ -18,8 +18,8 @@
         <p>
             Lorem Ipsum dolorem sit amet
         </p>
-        <img src="img.png" height="500px"/>
-        <p>
+        <img src="img/img.png" height="500px"/>
+        <p class="para">
             Lorem Ipsum <a href="https://www.zhdk.ch/" target="_blank" alt="Description of Images">ZHdK</a> sit amet
         </p>
         <ul>
