--- a/index.html
+++ b/index.html
@@ -1,36 +1,41 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Hello world!</title>
-        <link rel="stylesheet" href="css/style.css">
-    </head>
-    <body>
-        <h1>
-            <!-- this is a comment -->
-            Hello world!
-        </h1>
-        <h2>
-            Subtitle
-        </h1>
-        <p>
-            Lorem Ipsum dolorem sit amet
-        </p> 
-        <p>
-            Lorem Ipsum dolorem sit amet
-        </p>
-        <img src="img/img.png" height="500px"/>
-        <p class="para">
-            Lorem Ipsum <a href="https://www.zhdk.ch/" target="_blank" alt="Description of Images">ZHdK</a> sit amet
-        </p>
-        <ul>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-        </ul>
-        <ol>
-            <li>Item</li>
-            <li>Item</li>
-            <li>Item</li>
-        </ol>
-    </body>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Card</title>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://res.cloudinary.com/dr6lvwubh/raw/upload/v1581441981/Anicons/anicons-regular.css" rel="stylesheet">
+</head>
+
+<body>
+  <!-- Keep this div with the class card! -->
+  <div class="card">
+    <div class="card-top">
+    <!-- Write your markup in here! Feel free to delete the title and the text! -->
+      <h1 class="lineup">MARRØN<br />
+        Andy Katz<br />
+        Near End<br />
+        Gomorra
+      </h1>
+      <div class="event-image">
+        <image class="image" src="img/abstract.svg" width="110px" height="220px"/>
+      </div>
+      
+    </div>
+    <div class="card-bottom">
+      <p class="description">MARRØN untermauert seine Technoperspektive mit emanzipatorischer Praxis. Die Ästhetik ist die Botschaft, nicht froh, sondern dunkeldüster.</p>
+      <div>
+        <p class="date">SA, 21. MAI / 2300</p>
+        <div class="button">
+          <p>
+            P
+          </p>
+        </div>
+    </div>
+  </div>
+</body>
+
 </html>
