HTML formatting optimised

--- a/index.html
+++ b/index.html
@@ -7,33 +7,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Card</title>
   <link rel="stylesheet" href="style.css">
+  <!-- ANIMATED ICON FONT-->
   <link href="https://res.cloudinary.com/dr6lvwubh/raw/upload/v1581441981/Anicons/anicons-regular.css" rel="stylesheet">
 </head>
 
 <body>
-  <!-- Keep this div with the class card! -->
   <div class="card">
     <div class="card-top">
-    <!-- Write your markup in here! Feel free to delete the title and the text! -->
-      <h1 class="lineup">MARRØN<br />
+      <h1 class="lineup">
+        MARRØN<br />
         Andy Katz<br />
         Near End<br />
         Gomorra
       </h1>
       <div class="event-image">
-        <image class="image" src="img/abstract.svg" width="110px" height="220px"/>
+        <image class="image" src="img/abstract.svg" width="110px" height="220px" alt="Abstract Event Image" />
       </div>
-      
     </div>
     <div class="card-bottom">
-      <p class="description">MARRØN untermauert seine Technoperspektive mit emanzipatorischer Praxis. Die Ästhetik ist die Botschaft, nicht froh, sondern dunkeldüster.</p>
+      <p class="description">
+        MARRØN untermauert seine Technoperspektive mit emanzipatorischer Praxis. Die Ästhetik ist die Botschaft, nicht froh, sondern dunkeldüster.
+      </p>
       <div>
-        <p class="date">SA, 21. MAI / 2300</p>
+        <p class="date">
+          SA, 21. MAI / 2300
+        </p>
         <div class="button">
           <p>
             P
           </p>
         </div>
+      </div>
     </div>
   </div>
 </body>
