fixed with Jonas, can read out number now

--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -37,19 +37,19 @@
       <p>orange's turn</p>
       <div class="playfield">
         <div class="line">
-          <div class="" data-js="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
+          <div class="box" data-js="0"></div>
+          <div class="box" data-js="1"></div>
+          <div class="box" data-js="2"></div>
         </div>
         <div class="line">
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
+          <div class="box" data-js="3"></div>
+          <div class="box" data-js="4"></div>
+          <div class="box" data-js="5"></div>
         </div>
         <div class="line">
-          <div class="box"></div>
-          <div class="box"></div>
-          <div class="box"></div>
+          <div class="box" data-js="6"></div>
+          <div class="box" data-js="7"></div>
+          <div class="box" data-js="8"></div>
       </div>
       </div>
       <button>
