--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -34,7 +34,7 @@
     </div>
     <!-- Write your markup in here! Feel free to delete the title and the text! -->
     <div class="game">
-      <p>orange's turn</p>
+      <p id="turn">orange's turn</p>
       <div class="playfield">
         <div class="line">
           <div class="box" data-js="0"></div>
@@ -52,8 +52,8 @@
           <div class="box" data-js="8"></div>
       </div>
       </div>
-      <button>
-        give up
+      <button data-js="restart">
+        restart
       </button>
     </div>
 
