--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -15,13 +15,13 @@
   <div class="card">
     <div class="overlay" data-js="overlay">
       <div>
-        <p>Player 1</p>
-        <input type="text" id="player1" name="player1" placeholder="Add name...">
+        <p class="font-blue">Player 1</p>
+        <input class="font-blue" type="text" id="player1" name="player1" maxlength="15" placeholder="Add name...">
       </div>
       <button data-js="start">start!</button>
       <div>
-        <p>Player 2</p>
-        <input type="text" id="player2" name="player2"  placeholder="Add name...">
+        <p class="font-orange">Player 2</p>
+        <input class="font-orange" type="text" id="player2" name="player2"  maxlength="15" placeholder="Add name...">
       </div>
     </div>
     <!-- Write your markup in here! Feel free to delete the title and the text! -->
