--- a/ex-2/index.html
+++ b/ex-2/index.html
@@ -47,6 +47,9 @@
       <button data-js="restart">
         restart
       </button>
+      <p class="counter">
+        <span class="font-blue" data-js="counter1">0</span> : <span class="font-orange" data-js="counter2">0</span>
+      </p>
     </div>
 
 
